--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
 name = "StagedFilters"
 uuid = "c9c6d8d2-eaa5-11e8-3089-811798346984"
 authors = ["miguel raz <miguelraz@ciencias.unam.mx>"]
-version = "0.1.0"
+version = "0.1"
+
+[compat]
+julia = "1.1"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
