--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "c9c6d8d2-eaa5-11e8-3089-811798346984"
 authors = ["miguel raz <miguelraz@ciencias.unam.mx>"]
 version = "0.1.0"
 
+[deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+
 [compat]
 julia = "1.1"
 
