--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,13 @@ authors = ["miguel raz <miguelraz@ciencias.unam.mx>"]
 version = "0.1.0"
 
 [deps]
+Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
-julia = "1.1"
+julia = "1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
